<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:orientation="vertical"
            android:weightSum="10">

            <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/img_profile_pic"
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:layout_gravity="center_horizontal"
                android:layout_margin="8dp"
                android:layout_weight="2"
                android:src="@drawable/ic_camera"
                app:civ_border_color="@color/colorPrimary"
                app:civ_border_width="2dp" />

            <EditText
                android:id="@+id/edt_name"
                style="@style/EditTextStyle"
                android:layout_weight="1"
                android:hint="@string/name"
                android:inputType="text"
                android:maxLines="1" />

            <EditText
                android:id="@+id/edt_email"
                style="@style/EditTextStyle"
                android:layout_weight="1"
                android:hint="@string/email"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/edt_mo_no"
                style="@style/EditTextStyle"
                android:layout_weight="1"
                android:hint="@string/contact_no"
                android:inputType="phone"
                android:maxLength="10" />

            <EditText
                android:id="@+id/edt_pwd"
                style="@style/EditTextStyle"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                android:hint="@string/password"
                android:inputType="textPassword" />

            <EditText
                android:id="@+id/edt_confirm_pwd"
                style="@style/EditTextStyle"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                android:hint="@string/confirm_password"
                android:inputType="textPassword" />

            <Button
                android:id="@+id/btn_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="36dp"
                android:background="@color/colorPrimary"
                android:text="@string/register"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:textColor="@android:color/white" />
        </LinearLayout>
    </ScrollView>
</layout>