<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="16dp"
            android:gravity="center"
            tools:context="com.demo.user.LoginActivity">

            <EditText
                android:id="@+id/edt_email"
                style="@style/EditTextStyle"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:paddingBottom="20dp" />

            <EditText
                android:id="@+id/edt_pwd"
                style="@style/EditTextStyle"
                android:layout_below="@+id/edt_email"
                android:layout_marginTop="8dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingBottom="20dp" />

            <Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/edt_pwd"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="48dp"
                android:background="@color/colorPrimary"
                android:text="@string/login"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/txt_signup"
                style="@style/EditTextStyle"
                android:layout_below="@+id/btn_login"
                android:layout_marginTop="32dp"
                android:gravity="center"
                android:text="@string/signup_here"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                android:textColor="@color/colorPrimary" />

        </RelativeLayout>
    </RelativeLayout>
</layout>