<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="data"
            type="com.demo.database.Users" />
    </data>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:background="@color/cardview_light_background"
        android:elevation="4dp"
        app:cardCornerRadius="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/img_profile_pic"
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:layout_gravity="center_vertical"
                android:padding="8dp"
                android:src="@mipmap/ic_launcher"
                app:civ_border_color="@color/colorPrimary"
                app:civ_border_width="2dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/txt_name_label"
                        style="@style/textStyle"
                        android:text="@string/name" />

                    <TextView
                        android:id="@+id/txt_name"
                        style="@style/textStyle"
                        android:text='@{": "+data.name}'
                        tools:text=": Shabana Khatri" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/txt_email_label"
                        style="@style/textStyle"
                        android:text="@string/email" />

                    <TextView
                        android:id="@+id/txt_email"
                        style="@style/textStyle"
                        android:text='@{": "+data.email}'
                        tools:text=": huzukhatri@gmail.com" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/txt_contact_no_label"
                        style="@style/textStyle"
                        android:text="@string/contact_no" />

                    <TextView
                        android:id="@+id/txt_contact_no"
                        style="@style/textStyle"
                        android:text='@{": "+data.contact_no}'
                        tools:text=": 9409474258" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</layout>